--- a/index.css
+++ b/index.css
@@ -1,110 +1,105 @@
-body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("637225455392870000.png");
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  .clearfix {
-      overflow: auto;
-  }
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
-  
-  .title {
-      text-align: center;
-      font-size: 30px;
-      font-family: 'Montserrat', sans-serif;
-      color: #000000;
-      padding-top: 30px;
-  }
-  .introText {
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
-    color: #000000;
-    padding-top: 30px;
-  }
-  .graphArea {
-      height: 75%;
-      padding-left: 50px;
-      padding-right: 50px;
-  }
-  .graphArea2 {
-    height: 75%;
-    padding-right: 50px;
-    padding-left: 50px;
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-  .graphText {
-      margin-top: 100px;
-    font-family: 'Playfair Display', serif;
-      font-size: 25px;
-  }
-  .graphText2 {
-    margin-top: 100px;
-    font-family: 'Playfair Display', serif;
-    font-size: 25px;
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("637225455392870000.png");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
-  .graph {
-    float: right;
-    height: 65%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  .graph2 {
-    float: left;
-    height: 65%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-   .social-media {
-    font-size: 40px;
-  } 
-  
-   i {
-    font-size: 40px;
-    color: #c7c7c7;
-    text-align: center;
-    margin: 40px;
-    -webkit-transition: all 0.8s ease-in;
-    transition: all 0.8s ease-in;
-  }
-  
-  i:hover {
-    color: #323232;
-  } 
-  
-  .copyright {
-    color: #323232;
-    padding-bottom: 15px;
-  }
-  .outro {
-    font-size: 15px;
-    font-family: "Commissioner", sans-serif;
-    padding-top: 50px;
-    color: #323232;
-  }
-  .footer {
-    position:relative;
-    left:0;
-    bottom:0;
-    width:100%;
-    text-align:center;
-  }
+.clearfix {
+  overflow: auto;
+}
+.title {
+  text-align: center;
+  font-size: 30px;
+  font-family: "Montserrat", sans-serif;
+  color: #000000;
+  padding-top: 30px;
+}
+.introText {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Montserrat", sans-serif;
+  color: #000000;
+  padding-top: 30px;
+}
+.graphArea {
+  height: 75%;
+
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.graphArea2 {
+  height: 75%;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+.graphText {
+  margin-top: 100px;
+  color: #000000;
+  font-family: "Playfair Display", serif;
+  font-size: 25px;
+}
+.graphText2 {
+  margin-top: 100px;
+  color: #000000;
+  font-family: "Playfair Display", serif;
+  font-size: 25px;
+}
+.graph {
+  float: right;
+  height: 65%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.graph2 {
+  float: left;
+  height: 65%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.social-media {
+  font-size: 40px;
+}
+
+i {
+  font-size: 40px;
+  color: #c7c7c7;
+  text-align: center;
+  margin: 40px;
+  -webkit-transition: all 0.8s ease-in;
+  transition: all 0.8s ease-in;
+}
+
+i:hover {
+  color: #323232;
+}
+
+.copyright {
+  color: #323232;
+  padding-bottom: 15px;
+}
+.outro {
+  font-size: 15px;
+  font-family: "Commissioner", sans-serif;
+  padding-top: 50px;
+  color: #323232;
+}
+.footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
