--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ html {
   background-size: cover;
   position: relative;
 }
+
 .clearfix {
   overflow: auto;
 }
@@ -29,10 +30,29 @@ html {
   font-family: "Montserrat", sans-serif;
   color: #000000;
   padding-top: 30px;
+  padding-bottom: 50px;
+}
+.description {
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  color: #000000;
+}
+.why {
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  color: #000000;
+}
+.conculsion {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Montserrat", sans-serif;
+  color: #000000;
+  padding-top: 50px;
+  padding-bottom: 30px;
 }
 .graphArea {
-  height: 75%;
-
+  float: left;
+  height: 25%;
   padding-left: 50px;
   padding-right: 50px;
 }
@@ -42,20 +62,20 @@ html {
   padding-left: 50px;
 }
 .graphText {
-  margin-top: 100px;
   color: #000000;
-  font-family: "Playfair Display", serif;
+  word-wrap: break-word;
+  font-family: "Montserrat", sans-serif;
   font-size: 25px;
 }
 .graphText2 {
-  margin-top: 100px;
   color: #000000;
-  font-family: "Playfair Display", serif;
-  font-size: 25px;
+  word-wrap: break-word;
+  font-family: "Montserrat", sans-serif;
 }
 .graph {
   float: right;
-  height: 65%;
+  height: 25%;
+  padding-left: 50px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -63,7 +83,7 @@ html {
 }
 .graph2 {
   float: left;
-  height: 65%;
+  height: 50%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -93,7 +113,6 @@ i:hover {
 .outro {
   font-size: 15px;
   font-family: "Commissioner", sans-serif;
-  padding-top: 50px;
   color: #323232;
 }
 .footer {
@@ -102,4 +121,62 @@ i:hover {
   bottom: 0;
   width: 100%;
   text-align: center;
+}
+@media screen and (max-width: 1100px) {
+  .graph,
+  .graph2,
+  .graphArea,
+  .graphArea2 {
+    width: 75%;
+    height: auto;
+    padding-top: 80px;
+    background-position: center;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .graphText,
+  .graphText2,
+  .introText {
+    width: 100%;
+    font-size: 20px;
+    height: auto;
+    background-position: center;
+  }
+}
+@media screen and (max-width: 2400px) {
+  .graphText,
+  .graphText2 {
+    width: 100%;
+    font-size: 25px;
+    height: auto;
+    background-position: center;
+  }
+}
+@media screen and (min-width: 2400px) {
+  .graph,
+  .graph2,
+  .graphArea,
+  .graphArea2 {
+    width: 100%;
+    height: auto;
+    background-position: center;
+  }
+}
+@media screen and (max-width: 700px) {
+  .hero-image {
+    width: 100%;
+    height: auto;
+    background-position: center;
+  }
+}
+
+#stepsBlock {
+  background-color: #32323210;
+}
+#stepWords {
+  color: #f47221;
+  word-wrap: break-word;
+  font-family: "Montserrat", sans-serif;
+  font-size: 25px;
 }
